<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/backgroundElement" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/container" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/middle_text" android:textStyle="bold" android:textColor="?android:textColorPrimary" android:gravity="center" android:id="@id/header" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/double_large_margin" android:text="@string/popup_feedback_title" android:lineSpacingExtra="1.0sp" android:fontFamily="sans-serif" android:layout_marginStart="@dimen/double_large_margin" android:layout_marginEnd="@dimen/double_large_margin" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="@dimen/small_text" android:textStyle="normal" android:textColor="?android:textColorSecondary" android:gravity="center" android:id="@id/description" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/large_margin" android:text="@string/popup_feedback_description" android:lineSpacingExtra="8.0sp" android:fontFamily="sans-serif" android:layout_marginStart="@dimen/double_large_margin" android:layout_marginEnd="@dimen/double_large_margin" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/header" />
        <View android:id="@id/separator" android:background="@color/grey" android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_marginTop="@dimen/double_xl_24_margin" android:layout_marginStart="@dimen/large_margin" android:layout_marginEnd="@dimen/large_margin" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/description" />
        <CheckBox android:textSize="@dimen/small_text" android:textStyle="normal" android:textColor="?android:textColorPrimary" android:id="@id/cb_option1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/double_xl_24_margin" android:text="@string/boring_content" android:fontFamily="sans-serif" android:layout_marginStart="@dimen/double_xl_24_margin" android:layout_marginEnd="@dimen/double_xl_24_margin" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/separator" />
        <CheckBox android:textSize="@dimen/small_text" android:textStyle="normal" android:textColor="?android:textColorPrimary" android:id="@id/cb_option2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/double_xl_24_margin" android:text="@string/video_quality_bad" android:fontFamily="sans-serif" android:layout_marginStart="@dimen/double_xl_24_margin" android:layout_marginEnd="@dimen/double_xl_24_margin" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/cb_option1" />
        <CheckBox android:textSize="@dimen/small_text" android:textStyle="normal" android:textColor="?android:textColorPrimary" android:id="@id/cb_option3" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/double_xl_24_margin" android:text="@string/buffering_too_often" android:fontFamily="sans-serif" android:layout_marginStart="@dimen/double_xl_24_margin" android:layout_marginEnd="@dimen/double_xl_24_margin" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/cb_option2" />
        <CheckBox android:textSize="@dimen/small_text" android:textStyle="normal" android:textColor="?android:textColorPrimary" android:id="@id/cb_option4" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/double_xl_24_margin" android:text="@string/poor_interfaces" android:fontFamily="sans-serif" android:layout_marginStart="@dimen/double_xl_24_margin" android:layout_marginEnd="@dimen/double_xl_24_margin" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/cb_option3" />
        <CheckBox android:textSize="@dimen/small_text" android:textStyle="normal" android:textColor="?android:textColorPrimary" android:id="@id/cb_option5" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/double_xl_24_margin" android:text="@string/others" android:fontFamily="sans-serif" android:layout_marginStart="@dimen/double_xl_24_margin" android:layout_marginEnd="@dimen/double_xl_24_margin" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/cb_option4" />
        <EditText android:textSize="@dimen/small_text" android:textColor="?android:textColorPrimary" android:textColorHint="?android:textColorSecondary" android:gravity="start|top" android:id="@id/other_reason" android:background="@drawable/bg_feedback_desc" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="80.0dip" android:layout_marginTop="@dimen/large_margin" android:hint="@string/other_reason" android:inputType="text" android:layout_marginStart="@dimen/double_xl_24_margin" android:layout_marginEnd="@dimen/double_xl_24_margin" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/cb_option5" />
        <com.vidio.vidikit.VidioButton android:enabled="false" android:id="@id/btn_send" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/double_large_margin" android:text="@string/report_top_navigation_report_a_problem" android:layout_marginStart="@dimen/large_margin" android:layout_marginEnd="@dimen/large_margin" app:componentSize="large" app:componentStyle="flexible" app:componentVariant="primary" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/other_reason" />
        <com.vidio.vidikit.VidioButton android:id="@id/tv_later" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/large_margin" android:layout_marginBottom="@dimen/double_xl_24_margin" android:text="@string/maybe_next_time" android:layout_marginStart="@dimen/large_margin" android:layout_marginEnd="@dimen/large_margin" app:componentSize="large" app:componentStyle="flexible" app:componentVariant="ghost" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/btn_send" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
