<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/rounded_bottom_sheet_background" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/clear_data_header" android:background="@color/transparent" android:layout_width="0.0dip" android:layout_height="0.0dip" android:src="@drawable/bg_clear_data_header" android:scaleType="centerCrop" app:layout_constraintDimensionRatio="w, 1:1.8" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="24.0sp" android:textStyle="bold" android:textColor="@color/textPrimary" android:gravity="center" android:id="@id/clear_data_title" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginTop="32.0dip" android:text="@string/bottom_sheet_clear_data" app:layout_constraintLeft_toLeftOf="@id/clear_data_header" app:layout_constraintRight_toRightOf="@id/clear_data_header" app:layout_constraintTop_toBottomOf="@id/clear_data_header" />
    <TextView android:textSize="14.0sp" android:textColor="@color/gray30" android:gravity="center" android:id="@id/clear_data_description" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="56.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="56.0dip" android:text="@string/bottom_sheet_clear_data_warn" android:lineSpacingExtra="6.0sp" app:layout_constraintLeft_toLeftOf="@id/clear_data_title" app:layout_constraintRight_toRightOf="@id/clear_data_title" app:layout_constraintTop_toBottomOf="@id/clear_data_title" />
    <androidx.appcompat.widget.AppCompatButton android:textSize="18.0sp" android:textColor="@color/white" android:id="@id/button_clear_data" android:background="@drawable/bg_pillshapedbutton_red" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="80.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="80.0dip" android:text="@string/bottom_sheet_clear_data_agree" android:textAllCaps="false" android:fontFamily="@string/font_roboto_medium" app:layout_constraintBottom_toTopOf="@id/button_later" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/clear_data_description" />
    <TextView android:textSize="16.0sp" android:textColor="@color/grey_9b" android:id="@id/button_later" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:layout_marginBottom="24.0dip" android:text="@string/cta_maybe_later" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@id/button_clear_data" app:layout_constraintStart_toStartOf="@id/button_clear_data" app:layout_constraintTop_toBottomOf="@id/button_clear_data" />
    <ImageView android:id="@id/clear_data_dialog_close" android:background="@drawable/bg_button_remove_login_popup" android:padding="10.0dip" android:layout_width="32.0dip" android:layout_height="32.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="16.0dip" android:layout_marginStart="20.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintRight_toRightOf="@id/clear_data_header" app:layout_constraintTop_toTopOf="@id/clear_data_header" app:srcCompat="@drawable/ic_cross" app:tint="@color/iconPrimary" />
</androidx.constraintlayout.widget.ConstraintLayout>
