<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/container" android:background="@color/uiBackground" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar android:id="@id/toolbar_forgot_password" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" app:titleTextColor="@color/textPrimary" />
    <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/textPrimary" android:gravity="center_horizontal" android:id="@id/tv_title_forgot_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/title_forgot_password" android:fontFamily="sans-serif-bold" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/toolbar_forgot_password" app:lineHeight="28.0sp" />
    <TextView android:textSize="14.0sp" android:textStyle="normal" android:textColor="@color/textSecondary" android:gravity="center_horizontal" android:id="@id/tv_desc_forgot_password" android:paddingBottom="32.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/double_xl_24_margin" android:layout_marginTop="16.0dip" android:layout_marginRight="@dimen/double_xl_24_margin" android:text="@string/desc_forgot_password" android:fontFamily="sans-serif" android:layout_marginHorizontal="@dimen/double_xl_24_margin" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_title_forgot_password" app:lineHeight="21.0sp" />
    <com.vidio.android.commons.view.ShapedTextInputLayout android:id="@id/til_email_forgot_password" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:backgroundType="rectGrey" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_desc_forgot_password">
        <EditText android:id="@id/et_email" android:background="@color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/account_settings_list_email" android:inputType="textEmailAddress" android:imeOptions="actionDone" style="@style/PillShapedTextInputLayoutEditText" />
    </com.vidio.android.commons.view.ShapedTextInputLayout>
    <com.vidio.vidikit.VidioButton android:id="@id/btn_send_forgot_password" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/large_padding" android:layout_marginTop="@dimen/double_large_margin" android:layout_marginRight="@dimen/large_padding" android:text="@string/cta_send" android:layout_marginHorizontal="@dimen/large_padding" app:componentSize="large" app:componentStyle="flexible" app:componentVariant="primary" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/til_email_forgot_password" />
</androidx.constraintlayout.widget.ConstraintLayout>
