<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/rounded_bottom_sheet_background" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/imageView_header_image" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="54.0dip" android:src="@drawable/img_insufficient_storage" android:scaleType="fitXY" android:layout_marginStart="@dimen/double_xl_24_margin" android:layout_marginEnd="@dimen/double_xl_24_margin" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/middle_text" android:textStyle="bold" android:textColor="@color/textPrimary" android:id="@id/title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/double_large_margin" android:text="@string/storage_full_title" android:layout_marginStart="@dimen/double_xl_24_margin" android:layout_marginEnd="@dimen/double_xl_24_margin" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/imageView_header_image" />
    <TextView android:textSize="@dimen/small_text" android:textColor="@color/textSecondary" android:id="@id/description" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/large_margin" android:text="@string/storage_full_desc" android:lineSpacingExtra="2.0sp" android:layout_marginStart="@dimen/double_xl_24_margin" android:layout_marginEnd="@dimen/double_xl_24_margin" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/title" />
    <TextView android:textSize="@dimen/small_text" android:textStyle="bold" android:textColor="@color/textPrimary" android:id="@id/neededMemoryLabel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/large_margin" android:text="@string/storage_needed_info" android:lineSpacingExtra="2.0sp" android:layout_marginStart="@dimen/double_xl_24_margin" android:layout_marginEnd="@dimen/double_large_margin" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/description" />
    <TextView android:textSize="@dimen/small_text" android:textStyle="bold" android:textColor="@color/red30" android:gravity="end" android:id="@id/neededMemory" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/large_margin" android:fontFamily="sans-serif" android:layout_marginEnd="@dimen/double_xl_24_margin" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/description" />
    <androidx.appcompat.widget.AppCompatButton android:id="@id/btn_later" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/double_large_margin" android:layout_marginBottom="@dimen/double_large_margin" android:text="@string/cta_maybe_later" android:textAllCaps="false" android:layout_marginStart="@dimen/double_xl_24_margin" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/btn_setting" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/neededMemory" app:layout_constraintVertical_bias="0.0" style="@style/OutlineButton" />
    <androidx.appcompat.widget.AppCompatButton android:textSize="@dimen/normal_text" android:textStyle="bold" android:textColor="@color/white" android:id="@id/btn_setting" android:background="@drawable/button_submit_background" android:paddingLeft="40.0dip" android:paddingRight="40.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/account_and_settings_list_settings" android:textAllCaps="false" android:fontFamily="sans-serif" android:layout_marginStart="@dimen/large_margin" android:layout_marginEnd="@dimen/double_xl_24_margin" app:layout_constraintBottom_toBottomOf="@id/btn_later" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/btn_later" app:layout_constraintTop_toTopOf="@id/btn_later" />
    <ImageView android:id="@id/icon_close" android:background="@drawable/bg_button_remove_login_popup" android:padding="@dimen/medium_10dp_padding" android:layout_width="32.0dip" android:layout_height="32.0dip" android:layout_marginTop="@dimen/large_margin" android:layout_marginEnd="@dimen/large_margin" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_cross" app:tint="@color/iconPrimary" />
</androidx.constraintlayout.widget.ConstraintLayout>
